修改沉浸式出现的问题和修改笔记界面BUG

--- a/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
+++ b/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
@@ -129,11 +129,8 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<p class="mui-title common-color-white" style="text-align: left;">云盘—记事</p>
-			<!--<img id="history" class="mui-icon mui-pull-right" src="../../image/cloud/record_history.gif" style="height: 40px;width: 40px;display: none;" />-->
-			<!--<img id="link" class="mui-icon mui-pull-right" src="../../image/cloud/record_link.gif" style="height: 40px;width: 40px;margin-right: 10px;" />-->
+			<p class="mui-title common-color-white" >云盘—记事</p>
 			<span id="history" class=" mui-icon iconfont icon-lishijilu mui-pull-right" style="color: white;"></span>
-
 		</header>
 		<div class="mui-content">
 			<div class="mui-popover" style="width: 100%;top: 150px;height: 200px;">
