--- a/JiaoBaoYun-hb/html/cloud/storage_upload.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_upload.html
@@ -595,6 +595,15 @@
 									</div>';
 					div.style.display = 'none';
 					document.getElementById("all").appendChild(div);
+					//---滑动start---
+					mui(".mui-scroll-wrapper").scroll({
+						scrollY: true, //是否竖向滚动
+						scrollX: false, //是否横向滚动
+						indicators: true, //是否显示滚动条
+						deceleration: 0.0006, //阻尼系数,系数越小滑动越灵敏
+						bounce: true, //是否启用回弹
+					});
+					//---滑动end---
 				}
 
 				/**
