--- a/JiaoBaoYun-hb/html/mine/qun_manage_info.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_info.html
@@ -82,7 +82,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<p class="mui-title common-color-white" style="text-align: left;">填写群信息</p>
+			<p class="mui-title common-color-white">填写群信息</p>
 		</header>
 		<div class="mui-content">
 			<div id="qunimage" style="text-align: center;margin-left: auto;margin-right: auto;">
