--- a/JiaoBaoYun-hb/html/cloud/storage_main.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_main.html
@@ -308,6 +308,7 @@
 									if(topFolderData[0].pid == showPid) {
 										topFolderData[0].fdata.push(newFolderData);
 									}
+									mui.toast('创建成功');
 								} else if(data.RspCode == 8) {
 									mui.toast('操作失败！已存在相同的名字');
 								} else {
