--- a/JiaoBaoYun-hb/html/mine/qun_data_details.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data_details.html
@@ -71,8 +71,8 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title" style="text-align: left;">资料详情</h1>
-			<a id="finish" class="mui-pull-right" style="display: none;color: gray;">保存</a>
+			<h1 class="mui-title" style="color: white;">资料详情</h1>
+			<h1 id="finish" class="mui-title" style="text-align: right;right: 10px;display: none;color: gray;">保存</h1>
 		</header>
 
 		<div class="mui-content mui-scroll-wrapper">
