--- a/JiaoBaoYun-hb/html/mine/qun_manage.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage.html
@@ -152,10 +152,8 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">群管理</h1>
-			<a id="invite" class="mui-icon mui-pull-right" style="display: none;">
-				<font style="font-size: 17px;">邀请</font>
-			</a>
+			<h1 class="mui-title" style="color: white;">群管理</h1>
+			<h1 id="invite" class="mui-title" style="text-align: right;right: 10px;display: none;">邀请</h1>
 		</header>
 		<div class="mui-content">
 			<span id="noqun" class="mui-icon mui-icon-plus addqun" style="display: none;">新增群按钮</span>
