--- a/JiaoBaoYun-hb/html/mine/qun_manage_info_change.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_info_change.html
@@ -79,7 +79,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title" style="text-align: left;">群信息</h1>
+			<h1 class="mui-title">群信息</h1>
 		</header>
 		<div class="mui-content" id="content">
 			<div id="qunimage">
