--- a/JiaoBaoYun-hb/html/mine/qun_manage_info_change_post.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_info_change_post.html
@@ -15,8 +15,8 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">修改群信息</h1>
-			<a id="save" class="mui-pull-right">保存</a>
+			<h1 class="mui-title" style="color: white;">修改群信息</h1>
+			<h1 id="save" class="mui-title" style="text-align: right;right: 10px;">保存</h1>
 		</header>
 		<div class="mui-content">
 			<div class="mui-input-row">
