修改笔记字号

--- a/JiaoBaoYun-hb/html/cloud/app_notes_sub.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_sub.html
@@ -66,6 +66,7 @@
 				/*margin: 3px;*/
 				/*border:  5px solid #ececec;*/
 				background: transparent;
+				font-size: 14px;
 			}
 
 			.dynamic-date {
