--- a/JiaoBaoYun-hb/html/cloud/keeprecord_history_main.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_history_main.html
@@ -45,8 +45,8 @@
 
 			//创建子页面
 			var sub = plus.webview.create('keeprecord_history_sub.html', 'keeprecord_history_sub.html', {
-				top: (localStorage.getItem('StatusHeightNo') * 1 + 45) + 'px'
-				//bottom: localStorage.getItem('$Statusbar'),
+				top: (localStorage.getItem('StatusHeightNo') * 1 + 45) + 'px',
+				bottom: '0px'
 			}, {
 				data: data
 			});
