--- a/JiaoBaoYun-hb/html/quan/studentdynamic_main.html
+++ b/JiaoBaoYun-hb/html/quan/studentdynamic_main.html
@@ -68,8 +68,8 @@
 			document.getElementById("title").innerText = data.studentName;
 			//创建子页面
 			var sub = plus.webview.create('studentdynamic_sub.html', 'studentdynamic_sub.html', {
-				top: (localStorage.getItem('StatusHeightNo') * 1 + 45) + 'px'
-				//bottom: localStorage.getItem('$Statusbar'),
+				top: (localStorage.getItem('StatusHeightNo') * 1 + 45) + 'px',
+				bottom:'0px'
 			}, {
 				data: data
 			});
