1、获取家校圈首页学生资料列表和班级空间列表修改接口 2、解决苹果手机第一次登陆 评论框不弹出的问题

--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -187,7 +187,7 @@
 	</head>
 
 	<body>
-		<footer id="footer">
+		<footer id="footer" class="mui-bar-tab">
 			<div class="footer-center">
 				<textarea onblur="inputOnblur(this)" id='msg-content' type="text" class='input-text'></textarea>
 			</div>
@@ -214,6 +214,7 @@
 	</body>
 
 	<script>
+	
 		var publisherId; //发布者id
 		var tempIndex; //节点对象id
 		var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //用户id
