0004325: 与我相关点击头像进入个人空间

--- a/JiaoBaoYun-hb/html/quan/aboutme_sub.html
+++ b/JiaoBaoYun-hb/html/quan/aboutme_sub.html
@@ -22,9 +22,9 @@
 		    </ul>
 		  </div>
 		</div>
-		<footer id="footer" class="mui-bar-tab">
+		<footer id="footer" class="mui-bar-tab display-none">
 			<div class="footer-center">
-				<textarea id='msg-content' type="text" class='input-text'></textarea>
+				<input id='msg-content' type="text" class='input-text'></input>
 			</div>
 			<button id='btn-reply' class="mui-btn mui-btn-green btn-commit">提交</button>
 		</footer>
