--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -187,8 +187,8 @@
 	</head>
 
 	<body>
-		<footer id="footer" class="mui-bar-tab">
-			<div class="footer-center">
+		<footer id="footer" class="mui-bar mui-bar-tab" style="display: none;">
+			<div class="footer-center" >
 				<textarea onblur="inputOnblur(this)" id='msg-content' type="text" class='input-text'></textarea>
 			</div>
 			<button id='btn-reply' class="mui-btn mui-btn-green btn-commit" style="background-color: #1db8F1;border-color:#1db8F1 ;">评论</button>
