--- a/JiaoBaoYun-hb/html/homework/homework-comment.html
+++ b/JiaoBaoYun-hb/html/homework/homework-comment.html
@@ -43,6 +43,8 @@
 		    
 		</div>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/mui.zoom.js "></script>
+		<script src="../../js/mui.previewimage.js "></script>
 		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/publicProtocol.js"></script>
 		<script src="../../js/publicHomeworkProtocol.js"></script>
