--- a/JiaoBaoYun-hb/html/quan/aboutme.html
+++ b/JiaoBaoYun-hb/html/quan/aboutme.html
@@ -22,22 +22,23 @@
 		<div class="mui-content"></div>
 		
 	</body>
-
+	<script src="../../js/utils/events.js"></script>
 	<script type="text/javascript">
+		events.initSubPage('aboutme_sub.html');
 		//启用双击监听
-		mui.init({
-			gestureConfig: {
-				doubletap: true
-			},
-			subpages: [{
-				url: 'aboutme_sub.html',
-				id: 'aboutme_sub.html',
-				styles: {
-					top: '45px',
-					bottom: localStorage.getItem('$Statusbar'),
-				}
-			}]
-		});
+//		mui.init({
+//			gestureConfig: {
+//				doubletap: true
+//			},
+//			subpages: [{
+//				url: 'aboutme_sub.html',
+//				id: 'aboutme_sub.html',
+//				styles: {
+//					top: '45px',
+//					bottom: localStorage.getItem('$Statusbar'),
+//				}
+//			}]
+//		});
 
 		var contentWebview = null;
 		document.querySelector('header').addEventListener('doubletap', function() {
